--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -92,3 +92,11 @@
   //   max-width: 1440px;
   // }
 }
+
+.contacts__map--img {
+  display: none;
+}
+
+.contacts__map--iframe {
+  border: none;
+}
