--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -17,11 +17,29 @@
   text-transform: uppercase;
   text-decoration: none;
   cursor: pointer;
+
+  &:hover {
+    background-color: $basic-green-2;
+  }
+
+  &:active {
+    background-color: $basic-green-2;
+    color: rgba($basic-white, 0.3);
+  }
 }
 
 .button--second {
   color: $special-dark-grey;
   background-color: $basic-grey;
+
+  &:hover {
+    background-color: $special-grey-2;
+  }
+
+  &:active {
+    background-color: $special-grey-2;
+    color: $special-dark-grey;
+  }
 }
 
 .button--third {
