--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -6,6 +6,14 @@
   justify-content: space-between;
   align-items: center;
 
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+
   @media screen and (min-width: $tablet-width) {
     gap: 13px;
     width: 174px;
