--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -66,6 +66,10 @@
   background-image: url("../../icons/stack.svg#icon-x");
 }
 
+.main-nav__wrapper {
+  position: relative;
+}
+
 .main-nav__wrapper--catalog {
   display: none;
 
@@ -78,10 +82,33 @@
   display: flex;
   flex-direction: column;
 
+
   @media screen and (min-width: $tablet-width) {
     flex-direction: row;
     gap: 33px;
     align-items: baseline;
+  }
+}
+
+.main-nav__list--opened {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 198px;
+  z-index: 10;
+  background-color: #ffffff;
+  width: 100%;
+
+  @media screen and (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav__list--nojs {
+  display: none;
+
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
   }
 }
 
@@ -135,7 +162,7 @@
 .main-nav__item-link--active {
   @media screen and (min-width: $tablet-width) {
     border-bottom: 2px solid $basic-green;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
   }
 }
 
