--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -5,10 +5,12 @@ $basic-black3: #222222;
 $basic-white: #ffffff;
 $basic-grey: #f2f2f2;
 $basic-grey-2: #e6e6e6;
+$basic-grey-3: #e7e7e7;
 $special-grey: #cdcdcd;
 $special-grey-2: #d9d9d9;
 $special-dark-grey: #444444;
 $basic-green: #68b738;
+$basic-green-2: #5eaa2f;
 
 /* Viewports */
 $tablet-width:768px;
