--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -33,6 +33,7 @@
 
   @media screen and (min-width: $tablet-width) {
     border: none;
+    padding-left: 36px;
   }
 
   @media screen and (min-width: $desktop-width) {
