Изменила крестик и цвет в обводке Показать все+ Акции

--- a/source/styles/blocks/card.scss
+++ b/source/styles/blocks/card.scss
@@ -33,7 +33,7 @@
     margin-top: 100px;
     height: 411px;
     background-image: none;
-    border: 1px solid $special-grey;
+    border: 2px solid $basic-grey;
   }
 }
 
