--- a/source/styles/blocks/actions.scss
+++ b/source/styles/blocks/actions.scss
@@ -131,8 +131,7 @@
   }
 
   &:focus-visible {
-    outline: 0 solid $basic-white;
-    border: 1px solid $special-dark-grey;
+    outline: 1px solid $special-dark-grey;
   }
 
   &::placeholder {
