--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,6 +1,6 @@
 .catalog {
   @media screen and (min-width: $tablet-width) {
-    padding-bottom: 74px;
+    padding-bottom: 48px;
   }
 }
 
@@ -15,10 +15,14 @@
   margin-bottom: 40px;
 
   @media screen and (min-width: $tablet-width) {
-    margin-top: 65px;
-    margin-bottom: 84px;
+    margin-top: 48px;
+    margin-bottom: 67px;
     font-size: 60px;
     line-height: 60px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin-top: 60px;
   }
 }
 
@@ -32,7 +36,7 @@
     grid-template-columns: repeat(2, 1fr);
     width: 768px;
     padding: 0 30px;
-    gap: 0 60px;
+    gap: 42px 60px;
     margin: 0 auto;
     border-bottom: none;
   }
@@ -40,7 +44,7 @@
   @media screen and (min-width: $desktop-width) {
     grid-template-columns: repeat(4, 1fr);
     width: 1280px;
-    gap: 0 80px;
+    gap: 48px 80px;
   }
 }
 
@@ -49,6 +53,6 @@
 
   @media screen and (min-width: $tablet-width) {
     border: none;
-    background-image: linear-gradient(180deg, #ffffff 20%, $basic-grey 20%);
+    background-image: linear-gradient(180deg, #ffffff 18%, $basic-grey 18%);
   }
 }
