--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -8,7 +8,7 @@
     align-items: center;
     flex-direction: row;
     padding: 0 30px;
-    gap: 94px;
+    gap: 92px;
     width: 768px;
     margin: 0 auto;
   }
@@ -18,7 +18,7 @@
     width: 1220px;
     margin: 0 auto;
     padding: 0;
-    padding-top: 50px;
+    padding-top: 30px;
     position: relative;
     z-index: 2;
   }
@@ -26,7 +26,7 @@
 
 .main-nav__header {
   height: 65px;
-  padding-top: 15px;
+  padding-top: 13px;
   padding-bottom: 15px;
   border-bottom: 1px solid $basic-grey-2;
 
@@ -35,6 +35,11 @@
     height: 75px;
     width: 174px;
     border-bottom: none;
+    padding-top: 16px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    padding-top: 13px;
   }
 }
 
@@ -57,7 +62,7 @@
   background-size: 24px 24px;
   border: none;
   width: 24px;
-  height: 24px;
+  height: 30px;
 
   @media screen and  (min-width: $tablet-width) {
     display: none;
@@ -82,6 +87,7 @@
 
   @media screen and (min-width: $desktop-width) {
     width: 720px;
+    padding-top: 18px;
   }
 }
 
@@ -104,6 +110,10 @@
     gap: 10px 33px;
     align-items: baseline;
     justify-content: end;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    gap: 10px 35px;
   }
 }
 
@@ -160,6 +170,10 @@
   @media screen and (min-width: $tablet-width) {
     font-size: 18px;
     line-height: 24px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    font-size: 20px;
   }
 }
 
