--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -26,15 +26,15 @@
   padding-bottom: 1px;
   color: #ffffff;
   text-align: center;
-  background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 62.4%, #ffffff 62.4%), url("../../images/index-background-mobile@1x.png"), linear-gradient(90deg, #424146, #424146);
-  background-size: 100%, 320px 320px;
+  background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 62.5%, #ffffff 62.5%), url("../../images/index-background-mobile@1x.png"), linear-gradient(90deg, #424146, #424146);
+  background-size: 100%, 320px 300px;
   background-position: top center;
   background-repeat: no-repeat;
 
   @media screen and (min-width: $tablet-width) {
     //  ding-top: 65px;
     padding-top: 8px;
-    padding-bottom: 529px;
+    padding-bottom: 525px;
     color: #111111;
     text-align: left;
     background-image: none;
@@ -44,8 +44,8 @@
   }
 
   @media screen and (min-width: $desktop-width) {
-    padding-top: 37px;
-    padding-bottom: 150px;
+    padding-top: 40px;
+    padding-bottom: 182px;
   }
 }
 
@@ -81,10 +81,14 @@
     // padding: 0;
     position: relative;
     z-index: 5;
-    margin-top: 40px;
-    margin-bottom: 41px;
+    margin-top: 39px;
+    margin-bottom: 39px;
     font-size: 60px;
     line-height: 60px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin-top: 56px;
   }
 }
 
@@ -126,8 +130,8 @@
   }
 
   @media screen and (min-width: $desktop-width) {
-    top: -70px;
-    left: 97%;
+    top: -100px;
+    left: 99%;
     transform: translateX(-29%);
     width: 552px;
     height: 499px;
@@ -138,6 +142,10 @@
   z-index: 1;
   margin: 0 auto;
   margin-top: 15px;
+
+  @media screen and (min-width: $tablet-width) {
+    margin-top: 18px;
+  }
 }
 
 .promo__button {
@@ -146,23 +154,23 @@
   // text-transform: uppercase;
   margin: 0;
   // width: 280px;
+  margin-top: -2px;
+  margin-bottom: 2px;
 
   @media screen and (min-width: $tablet-width) {
-    // margin: 50px 0;
+    z-index: 2;
+    width: 245px;
     height: 54px;
+    margin-top: 49px;
+    padding: 14px 10px;
     font-size: 20px;
     line-height: 26px;
-    // padding: 14px 0;
-    z-index: 2;
-
     position: relative;
-    margin-top: 48px;
-    padding: 16px 10px;
-    width: 245px;
   }
 
   @media screen and (min-width: $desktop-width) {
-    width: 242px;
+    width: 243px;
     padding: 14px 0;
+    margin-top: 52px;
   }
 }
