--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -63,6 +63,7 @@
   border: none;
   width: 24px;
   height: 30px;
+  transition: all 0.2s ease-in-out;
 
   @media screen and  (min-width: $tablet-width) {
     display: none;
