--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -173,7 +173,8 @@
 
 .sub-products__actions {
   background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 100%, #ffffff), url("../../images/actions-cat-mobile@1x.png");
-  height: 290px;
+  background-repeat: no-repeat;
+  min-height: 290px;
   margin-top: 33px;
   position: relative;
 
@@ -191,7 +192,7 @@
 
   @media screen and (min-width: $tablet-width) {
     margin-top: 70px;
-    height: 200px;
+    min-height: 200px;
     background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 100%, #ffffff), url("../../images/actions-cat-tablet@1x.png");
 
     &::before {
@@ -202,7 +203,7 @@
   @media screen and (min-width: $desktop-width) {
     margin: 0;
     width: 245px;
-    height: 288px;
+    min-height: 288px;
     background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 100%, #ffffff), url("../../images/actions-cat-desktop@1x.png");
 
     &::before {
