--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -58,7 +58,7 @@
 }
 
 .example__description {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: $special-dark-grey;
@@ -144,7 +144,7 @@
 }
 
 .example__item-text-second {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-size: 12px;
   line-height: 12px;
   color: $special-dark-grey;
