--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -151,7 +151,7 @@
 }
 
 .programs__description {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: $special-dark-grey;
