--- a/source/styles/blocks/academy.scss
+++ b/source/styles/blocks/academy.scss
@@ -26,7 +26,7 @@
 }
 
 .academy__text {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   color: $special-dark-grey;
