--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,12 +1,7 @@
 .button {
-  font-family: "Oswald", sans-serif;
-  // line-height: 20px;
+  font-family: "Oswald", "Arial", sans-serif;
   color: $basic-white;
-  // letter-spacing: 0;
-  // text-align: center;
   background-color: $basic-green;
-  // text-decoration: none;
-
   display: block;
   box-sizing: border-box;
   border: 0;
