--- a/source/styles/blocks/card.scss
+++ b/source/styles/blocks/card.scss
@@ -104,19 +104,12 @@
 }
 
 .card__item-title--more {
-  // background-image: url("../../icons/stack.svg#plus");
   width: 100%;
   padding-top: 13px;
-  // background-size: 30px;
-  // background-repeat: no-repeat;
-  // background-position: center top;
 
   @media screen and (min-width: $tablet-width) {
-    // background-size: 60px;
     padding-top: 25px;
     width: 170px;
-
-    // background-position-y: 50%;
   }
 
   @media screen and (min-width: $desktop-width) {
@@ -141,7 +134,7 @@
 }
 
 .card__table-cell {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-size: 12px;
   line-height: 14px;
   color: $special-dark-grey;
@@ -157,7 +150,7 @@
 }
 
 .card__item-description {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-size: 12px;
   line-height: 16px;
   color: $special-dark-grey;
