--- a/source/styles/blocks/catalog-subheader.scss
+++ b/source/styles/blocks/catalog-subheader.scss
@@ -1,5 +1,5 @@
 .catalog-subheader {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   line-height: 24px;
   color: $basic-black;
