--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -31,7 +31,6 @@
     width: 565px;
     top: 23%;
     padding: 63px 80px 61px;
-    // left: 110px;
   }
 }
 
@@ -65,7 +64,7 @@
 }
 
 .contacts__address-text {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-size: 14px;
   line-height: 20px;
   color: $special-dark-grey;
@@ -88,12 +87,6 @@
   display: block;
   object-fit: cover;
   width: 100%;
-
-  // @media screen and (min-width: $desktop-width) {
-  //   position: relative;
-  //   z-index: 0;
-  //   max-width: 1440px;
-  // }
 }
 
 .contacts__map--iframe {
