--- a/source/styles/blocks/functions.scss
+++ b/source/styles/blocks/functions.scss
@@ -39,7 +39,7 @@
 }
 
 .functions__item {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: $special-dark-grey;
@@ -88,7 +88,7 @@
       right: 0;
       z-index: -1;
       bottom: 10px;
-      font-family: "Oswald", sans-serif;
+      font-family: "Oswald", "Arial", sans-serif;
     }
   }
 
