--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,5 +1,7 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее */
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
   // outline: 2px solid rgba(255, 0, 0, 0.8);
 }
