--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -10,7 +10,7 @@
   }
 }
 
-.programs_wrapper {
+.programs__wrapper {
   max-width: 100%;
 }
 
@@ -172,7 +172,7 @@
   @media screen and (min-width: $desktop-width) {
     width: 457px;
     min-height: 95px;
-    margin-bottom: 33px;
+    margin-bottom: 10px;
   }
 }
 
