--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -9,6 +9,8 @@
 @import "./blocks/header.scss";
 @import "./blocks/page.scss";
 @import "./blocks/button.scss";
+@import "./blocks/visually-hidden.scss";
+@import "./blocks/wrapper.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/logo.scss";
